[A] strings (min max) [A] checking min and max value

--- a/lib/localization/de.json
+++ b/lib/localization/de.json
@@ -10,5 +10,8 @@
   "pleaseChoose"  :"Bitte wählen:",
   "noName"        :"kein Namen gefunden",
   "on"            :"eingeschaltet",
-  "off"           :"ausgeschaltet"
+  "off"           :"ausgeschaltet",
+  "MinMaxError"   :"Der Wert liegt außerhalb des Gültigkeitsbereiches.",
+  "min"           : "min:",
+  "max"           : "max:"
 }
