[a] add missing string

--- a/lib/localization/en.json
+++ b/lib/localization/en.json
@@ -18,5 +18,6 @@
  "noValue"       :"no value",
  "value"         :"value",
  "switch"        :"(switch)",
- "button"        :"(button)"
+ "button"        :"(button)",
+ "noLamp"        :"Could not find a lamp with the name:"
 }
