--- a/lib/localization/de.json
+++ b/lib/localization/de.json
@@ -18,5 +18,6 @@
   "noValue"       :"kein Wert",
   "value"         :"Wert",
   "switch"        :"(Schalter)",
-  "button"        :"(Taster)"
+  "button"        :"(Taster)",
+  "noLamp"        :"Konnte kein Lampe finden mit dem Namen:"
 }
