[A] google state last command [C] set virtual states with ack true

--- a/lib/localization/de.json
+++ b/lib/localization/de.json
@@ -19,5 +19,5 @@
   "value"         :"Wert",
   "switch"        :"(Schalter)",
   "button"        :"(Taster)",
-  "noLamp"        :"Konnte kein Lampe finden mit dem Namen:"
+  "noLamp"        :"Konnte kein Schalter finden mit dem Namen:"
 }
