--- a/lib/localization/de.json
+++ b/lib/localization/de.json
@@ -1,24 +1,24 @@
 {
-  "SwitchOn"      :"Ger‰t wurde angeschaltet.",
-  "SwitchOff"     :"Ger‰t wurde ausgeschaltet.",
-  "ButtonChange"  :"Ger‰t wurde geschaltet.",
+  "SwitchOn"      :"Ger√§t wurde angeschaltet.",
+  "SwitchOff"     :"Ger√§t wurde ausgeschaltet.",
+  "ButtonChange"  :"Ger√§t wurde geschaltet.",
   "currentNumber" :"Momentaner Wert ist:",
   "InputNumber"   :"Bitte geben Sie ein neuen ganzzahligen Wert ein:",
   "WrongInput"    :"Der Wert war nicht korrekt.",
-  "SetNumber"     :"Das Ger‰t wurde auf folgenden Wert gesetzt ",
-  "enumError"     :"Achtung: Aufz‰hlungname nicht gefunden!",
-  "pleaseChoose"  :"Bitte w‰hlen:",
+  "SetNumber"     :"Das Ger√§t wurde auf folgenden Wert gesetzt ",
+  "enumError"     :"Achtung: Aufz√§hlungname nicht gefunden!",
+  "pleaseChoose"  :"Bitte w√§hlen:",
   "noName"        :"kein Namen gefunden",
   "on"            :"eingeschaltet",
   "off"           :"ausgeschaltet",
-  "MinMaxError"   :"Der Wert liegt auﬂerhalb des G¸ltigkeitsbereiches.",
+  "MinMaxError"   :"Der Wert liegt au√üerhalb des G√ºltigkeitsbereiches.",
   "min"           :"min:",
   "max"           :"max:",
-  "overview"      :"‹bersicht",
+  "overview"      :"√úbersicht",
   "noValue"       :"kein Wert",
   "value"         :"Wert",
   "switch"        :"(Schalter)",
   "button"        :"(Taster)",
   "noLamp"        :"Konnte kein Schalter finden mit dem Namen:",
-  "JSONError"     :"Die Google Tabelle konnte nicht geˆffnet werden."
+  "JSONError"     :"Die Google Tabelle konnte nicht ge√∂ffnet werden."
 }
