--- a/lib/localization/en.json
+++ b/lib/localization/en.json
@@ -20,5 +20,6 @@
  "switch"        :"(switch)",
  "button"        :"(button)",
  "noLamp"        :"Could not find a switch with the name:",
- "JSONError"     :"The Google spreadsheet could not be opened."
+ "JSONError"     :"The Google spreadsheet could not be opened.",
+ "pollingAbort"  :"Google polling abort"
 }
