--- a/lib/localization/en.json
+++ b/lib/localization/en.json
@@ -21,5 +21,6 @@
  "button"        :"(button)",
  "noLamp"        :"Could not find a switch with the name:",
  "JSONError"     :"The Google spreadsheet could not be opened.",
- "pollingAbort"  :"Google polling abort"
+ "pollingAbort"  :"Google polling abort",
+ "pollingRestart":"polling restart google sheets"
 }
