add some strings

--- a/lib/localization/de.json
+++ b/lib/localization/de.json
@@ -4,7 +4,9 @@
   "ButtonChange"  :"Gerät wurde geschaltet.",
   "currentNumber" :"Momentaner Wert ist:",
   "InputNumber"   :"Bitte geben Sie ein neuen ganzzahligen Wert ein:",
+  "InputText"     :"Bitte geben Sie den Text ein:",
   "WrongInput"    :"Der Wert war nicht korrekt.",
+  "ErrorTextInput":"Der Text konnte nicht gesetzt werden.",
   "SetNumber"     :"Das Gerät wurde auf folgenden Wert gesetzt ",
   "enumError"     :"Achtung: Aufzählungname nicht gefunden!",
   "pleaseChoose"  :"Bitte wählen:",
