--- a/lib/localization/en.json
+++ b/lib/localization/en.json
@@ -3,8 +3,10 @@
  "SwitchOff"     :"Device was turned off.",
  "ButtonChange"  :"Device has been switched on.",
  "InputNumber"   :"Please enter a new integer value:",
+ "InputText"     :"Please enter a new text value:",
  "currentNumber" :"Current value is:",
  "WrongInput"    :"The value was not correct.",
+ "ErrorTextInput":"The text could not be set.",
  "SetNumber"     :"The device was set to the following value:",
  "enumError"     :"Warning: enumeration name not found!",
  "pleaseChoose"  :"Please choose:" ,
